# OpenGL_Learn

./: CMakeLists.txt  LICENSE  main.cpp
Shaders/Vertex/: triangleVertex.vs
include/: GLFWwindowClass.hpp  GlobalHead.hpp  ModelData.hpp  Shader.hpp
include/glad/: glad.h
src/: GLFWwindowClass.cpp  Shader.cpp  glad.c
